Agregar listado y visualizar post

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 
 {% extends 'index.html' %}
 {% load static %}
-{% block title %}¿Quienes somos?{% endblock title %}
+{% block title %}¿Quiénes somos?{% endblock title %}
 
 {% block imagen %}
   {% static 'img/about.gif' %}
