--- a/templates/purpose.html
+++ b/templates/purpose.html
@@ -3,7 +3,7 @@
 {% block title %}¿Anécdotas?{% endblock title %}
 
 {% block imagen %}
-  {% static 'img/purpose.jpeg' %}
+  {% static 'img/purpose.jpg' %}
 {% endblock imagen %}
 
 {% block titulo_principal %}Propósito{% endblock titulo_principal %}
